--- a/frontend/src/assets/autocomplete.html
+++ b/frontend/src/assets/autocomplete.html
@@ -9,11 +9,13 @@
       padding: 0;
     }
     body, html {
+      width: 100%;
       display: flex;
       justify-content: flex-start;
       height: 2rem;
     }
     #search {
+      width: 85%;
       border: none;
     }
     #search:focus {
